--- a/index.html
+++ b/index.html
@@ -23,21 +23,22 @@
 <section id="features">
 <div class="boxes">
 
-<div class="box" id="box-nomargin">
-<h1>Roleplay<br><img src="img/soldier.png" height="300"></h1>
+<div class="box" id="roleplay-box">
+<h1>Roleplay<br><img src="img/roleplay.png" height="300"></h1>
 <p>Pacfiic as a community is all about roleplay, hence the title, and we strive
   to keep the quality of it at it's best as best we can. All of our players enjoy
-  our server and the gameplay it provides.
+  our server and the gameplay it provides. Click <a class="regimentarea" href="regimentarea.html">here</a>
+  to enter the regiment area.
 </p>
 </div>
-<div class="box">
+<div class="box" id="staff-box">
 <h1>Staff<br><img src="img/staff.png" height="300"></h1>
 <p>The staff at Pacific Roleplay are extremely good at their job. They always get
   the job done and give out help to anyone that needs it. We make sure that the
   staff are always performing well.
 </p>
 </div>
-<div class="box">
+<div class="box" id="server-box">
 <h1>Server<br><img src="img/server.png" height="300"></h1>
 <p>Our servers are all developed to the highest standard. Exploits are non-existant
   and the optimisation is at it's finest. We only let people with the proper experience
@@ -47,7 +48,7 @@
 </div>
 </section>
 <footer>
-<p>Copyright © 2019 All Rights Reserved.</p>
+.
 </footer>
 </body>
 </html>
