--- a/regimentarea.html
+++ b/regimentarea.html
@@ -9,17 +9,62 @@
   <body>
     <div class="content">
     <header>
-      <h1>Regiment Area</h1>
+      <h1>REGIMENT AREA</h1>
       <nav>
         <ul>
           <li><a href="https://www.pacificroleplay.com/store">Donate</a></li>
           <li><a href="https://discord.gg/PnXBgsU">Discord</a></li>
           <li><a href="https://www.pacificroleplay.mistforums.com/">Forums</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <section id="showcase">
-      <img src="img/regimentarea.png" alt="Regiment Area" width="1536" height="600">
-    </section>
+    <article>
+
+      <section id="usmc">
+        <a href="regiments/usmc.html">
+        <div>
+          <h1>United States Marine Corp<br>
+              <img src="img/regiments/usmc.jpg" alt="United States Marine Corp" height="300" width="350">
+          </h1>
+          <p>The United States Marine Corps, also referred to as
+             the United States Marines or U.S. Marines, is a branch
+             of the United States Armed Forces responsible for conducting
+             expeditionary and amphibious operations with the United States
+             Navy as well as the Army and Air Force.</p>
+        </div>
+      </a>
+      </section>
+
+      <section id="mp">
+      <a href="regiments/mp.html">
+        <div>
+          <h1>Military Police<br>
+            <img src="img/regiments/mp.jpg" alt="Military Police" height="300" width="300">
+          </h1>
+          <p>The Royal Military Police is the part of a Military that is
+            responsible for the policing of army service personnel,
+            and for providing a military police presence both in the home country and
+            while service personnel are deployed overseas on operations and
+            exercises.</p>
+        </div>
+      </a>
+      </section>
+      <section id="srr">
+      <a href="regiments/srr.html">
+        <div>
+          <h1>Special Reconnaissance<br>Regiment<br>
+            <img src="img/regiments/srr.jpg" alt="Special Reconnaissance Regiment" height="300" width="300">
+          </h1>
+          <p>The Royal Military Police is the part of a Military that is
+            responsible for the policing of army service personnel,
+            and for providing a military police presence both in the home country and
+            while service personnel are deployed overseas on operations and
+            exercises.</p>
+        </div>
+      </a>
+      </section>
+    </article>
     </div>
   </body>
 </html>
